--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,18 +13,26 @@
   <body>
 
     <header>
-      <div class="container">
-        <a id="a-title" href="{{ '/' | relative_url }}">
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        </a>
-        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
+      <div class="container header-content">
+        <div class="title-container">
+          <a id="a-title" href="{{ '/' | relative_url }}">
+            <h1>{{ site.title | default: site.github.repository_name }}</h1>
+          </a>
+          <h2>{{ site.description | default: site.github.project_tagline }}</h2>
+        </div>
+        <div class="image-container">
+          <!-- Image goes here -->
+          <img src="/assets/images/home_background.jpg" alt="Banner Image">
+        </div>
+      </div>
 
+   
         <section id="downloads">
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
-            <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
-          {% endif %}
+            <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>          
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          {% endif %}
         </section>
       </div>
     </header>
