--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,42 @@
 ---
 
 @import 'jekyll-theme-hacker';
+
+.header-content {
+    display: flex;
+    align-items: center; /* Aligns items vertically in the center */
+    justify-content: space-between; /* Spaces out the title and image */
+    padding: 0px 0; /* Adjust padding as needed */
+  }
+  
+  .title-container {
+    flex: 1; /* Allows the title container to grow and fill the space */
+    padding-right: 10px; /* Adds some space between the title and the image */
+  }
+  
+  .image-container {
+    flex-basis: 65%; /* Adjust based on the size you want for the image */
+    text-align: right; /* Aligns the image to the right */
+  }
+  
+  .image-container img {
+    width: 100%; /* Makes the image responsive */
+    height: auto; /* Maintains aspect ratio */
+  }
+
+
+  @media (max-width: 768px) {
+    .header-content {
+      flex-direction: column;
+      align-items: center; /* Centers items horizontally */
+    }
+  
+    .title-container, .image-container {
+      flex-basis: auto; /* Resets the basis for stacking */
+      text-align: center; /* Centers the text and image */
+    }
+  
+    .image-container {
+      padding-top: 20px; /* Adds some space above the image */
+    }
+  }
