--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,6 +20,18 @@
             <h1>{{ site.title | default: site.github.repository_name }}</h1>
           </a>
           <h2>{{ site.description | default: site.github.project_tagline }}</h2>
+          <a href="mailto:scabini[AT]ifsc.usp.br" target="_blank" rel="noopener noreferrer"><i class="fas fa-envelope"></i></a>
+          <a href="https://github.com/scabini" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+          <a href="https://twitter.com/LeonardoScabini" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a><br>
+          <a href="https://scholar.google.com.br/citations?user=qoZKVscAAAAJ&hl" target="_blank" rel="noopener noreferrer"><i class="fas fa-graduation-cap"></i> Google Scholar</a><br>
+          <a href="https://www.scopus.com/authid/detail.uri?authorId=57190870680" target="_blank" rel="noopener noreferrer"><i class="fas fa-search"></i> Scopus</a>
+          <a href="https://orcid.org/0000-0003-3986-7747" target="_blank" rel="noopener noreferrer"><i class="fab fa-orcid"></i> ORCID</a><br>
+          <a href="https://lattes.cnpq.br/8511830644716787" target="_blank" rel="noopener noreferrer"><i class="fas fa-id-badge"></i> Lattes</a>  
+          <a href="https://bv.fapesp.br/pt/pesquisador/707175/leonardo-felipe-dos-santos-scabini/" target="_blank" rel="noopener noreferrer"><i class="fas fa-search"></i> BV FAPESP</a>
+          
+          
+
+
         </div>
         <div class="image-container">
           <!-- Image goes here -->
