created the blog structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,9 +29,6 @@
           <a href="https://lattes.cnpq.br/8511830644716787" target="_blank" rel="noopener noreferrer"><i class="fas fa-id-badge"></i> Lattes</a>  
           <a href="https://bv.fapesp.br/pt/pesquisador/707175/leonardo-felipe-dos-santos-scabini/" target="_blank" rel="noopener noreferrer"><i class="fas fa-search"></i> BV FAPESP</a>
           
-          
-
-
         </div>
         <div class="image-container">
           <!-- Image goes here -->
@@ -50,10 +47,18 @@
       </div>
     </header>
 
+    <!-- Button Menu Start -->
+    <div class="button-menu">
+      <a href="/" class="btn">Home</a>      
+      <a href="/papers/" class="btn">Papers</a>
+    </div>
+    <!-- Button Menu End -->
+
     <div class="container">
       <section id="main_content">
         {{ content }}
       </section>
     </div>
+    
   </body>
 </html>
