--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         </div>
         <div class="image-container">
           <!-- Image goes here -->
-          <img src= "{{ '/assets/images/home_background.jpg' | append: site.github.build_revision | relative_url }}" alt="Banner Image">
+          <img src= "{{ '/assets/images/home_background.jpg' | relative_url }}" alt="Banner Image">
         </div>
       </div>
 
@@ -49,8 +49,8 @@
 
     <!-- Button Menu Start -->
     <div class="button-menu">
-      <a href="{{ '/' | append: site.github.build_revision | relative_url }}" class="btn">Home</a>      
-      <a href= "{{ '/papers/' | append: site.github.build_revision | relative_url }}" class="btn">Papers</a>
+      <a href="{{ '/' | relative_url }}" class="btn">Home</a>      
+      <a href= "{{ '/papers/' | relative_url }}" class="btn">Papers</a>
     </div>
     <!-- Button Menu End -->
 
