--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
     <!-- Button Menu Start -->
     <div class="button-menu">
       <a href="{{ '/' | relative_url }}" class="btn">Home</a>      
-      <a href= "{{ '/papers/' | relative_url }}" class="btn">Papers</a>
+      <a href= "{{ '/papers.html' | relative_url }}" class="btn">Papers</a>
     </div>
     <!-- Button Menu End -->
 
