--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,8 @@
           <h2>{{ site.description | default: site.github.project_tagline }}</h2>
           <a href="mailto:scabini[AT]ifsc.usp.br" target="_blank" rel="noopener noreferrer"><i class="fas fa-envelope"></i></a>
           <a href="https://github.com/scabini" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-          <a href="https://twitter.com/LeonardoScabini" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a><br>
+          <a href="https://twitter.com/LeonardoScabini" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/leonardo-scabini-b92bb9214/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a><br>
           <a href="https://scholar.google.com.br/citations?user=qoZKVscAAAAJ&hl" target="_blank" rel="noopener noreferrer"><i class="fas fa-graduation-cap"></i> Google Scholar</a><br>
           <a href="https://www.scopus.com/authid/detail.uri?authorId=57190870680" target="_blank" rel="noopener noreferrer"><i class="fas fa-search"></i> Scopus</a>
           <a href="https://orcid.org/0000-0003-3986-7747" target="_blank" rel="noopener noreferrer"><i class="fab fa-orcid"></i> ORCID</a><br>
